# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  Dockerfile slmsbuster  README.md  deployment.yaml  main.tf  outputs.tf  pyproject.toml  secrets_.yaml  service.yaml  variables.tf
.github/: push-testing.yml
.github/workflows/: Push-Docker-Azure.yml  push-testing.yml  test-push-container-workflow.yml  test_pushpull.yml
Documentation/: Component diagram.drawio  Component diagram.html  Container Diagram.drawio  Container Diagram.html  Context Diagram.drawio  Context Diagram.html  Untitled Diagram.drawio
deployment/: .env.j2  ansible-inventory  ansible-playbook.yml  todoapp.service
todo_app/: app.py  item.py  test_pytests.py
todo_app/data/: database_items.py  item.py  trello_items.py  views.py
todo_app/templates/: index.html
