[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
requests = "^2.27.1"
pytest = "^7.0.1"
gunicorn = "^20.1.0"
MarkupSafe = "2.0.1"
pymongo = "^4.2.0"
mongomock = "^4.1.2"
Flask-Login = "^0.6.2"
loggly-python-handler = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
